feat: add Role-based access control (RBAC) with admin-only user listing endpoint